--- a/solana/sol-get-tokens/package.json
+++ b/solana/sol-get-tokens/package.json
@@ -2,12 +2,10 @@
   "name": "sol-get-tokens",
   "version": "0.1.0",
   "description": "How to get all tokens held by a Solana wallet",
-  "main": "index.js",
   "scripts": {
-    "tokens": "ts-node index.ts"
+    "start": "ts-node index.ts"
   },
-  "keywords": [ "QuickNode", "Solana", "Crypto Wallet"],
-  "author": "Anthony Campolo",
+  "keywords": [ "QuickNode", "Solana", "Crypto Wallet" ],
   "license": "MIT",
   "dependencies": {
     "@solana/spl-token": "^0.3.4",
@@ -17,6 +15,6 @@
     "dotenv": "^16.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
-    "@types/node": "^18.7.16"
+    "@types/node": "^18.8.3"
   }
 }
