--- a/ethereum/erc-6551/package.json
+++ b/ethereum/erc-6551/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@openzeppelin/contracts": "^4.9.3"
+    "@openzeppelin/contracts": "^4.9.3",
+    "dotenv": "^16.3.1"
   }
 }
