add: wk6/02 - game api

--- a/solana/solana-basics-course/solana-dapp/package.json
+++ b/solana/solana-basics-course/solana-dapp/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
     "@solana/spl-token": "^0.3.8",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
