feat: add Jupiter Token List

--- a/sample-dapps/solana-wallet-explorer/.env.example
+++ b/sample-dapps/solana-wallet-explorer/.env.example
@@ -3,3 +3,4 @@
 # Update the DAS_API_ENABLED to true if you have the DAS API enabled
 SOLANA_RPC_URL=https://example.solana-mainnet.quiknode.pro/123456/
 DAS_API_ENABLED=false 
+NEXT_PUBLIC_FETCH_JUPLIST=true
