--- a/courses/solana-basics/final/.env.example
+++ b/courses/solana-basics/final/.env.example
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_ENDPOINT=https://sample.solana-devnet.quiknode.pro/123456/
 NEXT_PUBLIC_CLUSTER=devnet
-
+NEXT_PUBLIC_PROGRAM_ADDRESS=QTTmCrRSrMhPtZS431TSmtiosubJoqfExRhi7JHcJhC
