--- a/sample-dapps/solana-token-maker/package.json
+++ b/sample-dapps/solana-token-maker/package.json
@@ -13,6 +13,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "next": "14.1.4",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
