--- a/sample-dapps/solana-token-maker/.env.example
+++ b/sample-dapps/solana-token-maker/.env.example
@@ -1,2 +1,3 @@
 QN_IPFS_API=QN_abc123456789xyz_REPLACE_THIS
+QN_ENDPOINT=https://example.solana-mainnet.quiknode.pro/123456
 NEXT_PUBLIC_GATEWAY_URL=https://quicknode.quicknode-ipfs.com/ipfs/
