--- a/sample-dapps/solana-token-maker/package.json
+++ b/sample-dapps/solana-token-maker/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.3",
+    "@solana/spl-token-metadata": "^0.1.2",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.91.4",
     "next": "14.1.4",
     "pino-pretty": "^11.0.0",
     "react": "^18",
