--- a/sample-dapps/solana-token-maker/package.json
+++ b/sample-dapps/solana-token-maker/package.json
@@ -18,7 +18,8 @@
     "next": "14.1.4",
     "pino-pretty": "^11.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/node": "^20",
