--- a/sample-dapps/evm-token-factory/package.json
+++ b/sample-dapps/evm-token-factory/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
     "@web3modal/ethers": "^4.1.11",
     "ethers": "^6.12.0",
     "next": "14.2.3",
