--- a/sample-dapps/ethereum-address-appearances/package.json
+++ b/sample-dapps/ethereum-address-appearances/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-dapp",
+  "name": "ethereum-address-appearances",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,10 +13,8 @@
     "@quicknode/sdk": "^2.2.2",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
-    "chartjs-adapter-date-fns": "^3.0.0",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
