--- a/sample-dapps/evm-token-factory/package.json
+++ b/sample-dapps/evm-token-factory/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
+    "@types/node": "^20.14.2",
     "@web3modal/ethers": "^4.1.11",
     "ethers": "^6.12.0",
     "next": "14.2.3",
