--- a/solana/web3.js-2.0/package.json
+++ b/solana/web3.js-2.0/package.json
@@ -11,8 +11,9 @@
   "description": "",
   "dependencies": {
     "@solana-program/compute-budget": "^0.5.0",
-    "@solana-program/system": "^0.5.0",
-    "@solana-program/token": "^0.2.1",
+    "@solana-program/token": "^0.3.2",
+    "@solana-program/memo": "^0.5.2",
+    "@solana-program/system": "^0.5.2",
     "@solana/web3.js": "^2.0.0-rc.1"
   },
   "devDependencies": {
