--- a/sample-dapps/coinbase-x402/package.json
+++ b/sample-dapps/coinbase-x402/package.json
@@ -1,12 +1,14 @@
 {
   "name": "x402-video-paywall",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "node testAccess.js"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
+    "vercel-dev": "vercel dev",
+    "test": "node testAccess.js",
+    "build": "echo 'No build step required'",
+    "vercel-build": "echo 'No build step required'"
   },
   "keywords": ["x402", "paywall", "video", "cryptocurrency", "blockchain"],
   "author": "",
@@ -21,6 +23,10 @@
     "x402-fetch": "^0.3.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "vercel": "latest"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
