Update imports from @solana/web3.js to @solana/kit
Udpated Solana kit content - Replaced all imports of @solana/web3.js with @solana/kit across the Solana kit examples and updated related dependencies in package.json files. Also updated @solana-program dependencies to latest versions and made small code adjustments for compatibility with @solana/kit.

--- a/solana/web3.js-2.0/deserialize/package.json
+++ b/solana/web3.js-2.0/deserialize/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@solana/web3.js": "^2.0.0",
+    "@solana/kit": "^2.3.0",
     "dotenv": "^16.4.7"
   },
   "devDependencies": {
