--- a/solana/web3.js-2.0/package.json
+++ b/solana/web3.js-2.0/package.json
@@ -10,13 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@solana-program/compute-budget": "^0.5.0",
-    "@solana-program/token": "^0.3.2",
-    "@solana-program/memo": "^0.5.2",
-    "@solana-program/system": "^0.5.2",
-    "@solana/web3.js": "^2.0.0-rc.1"
+    "@solana-program/compute-budget": "^0.8.0",
+    "@solana-program/memo": "^0.7.0",
+    "@solana-program/system": "^0.7.0",
+    "@solana-program/token": "^0.5.1",
+    "@solana/kit": "^2.3.0"
   },
   "devDependencies": {
-    "@types/node": "^22.5.2"
+    "@types/node": "^24.0.14"
   }
 }
