--- a/solana/web3.js-2.0/pump-fun-api/package.json
+++ b/solana/web3.js-2.0/pump-fun-api/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@solana/web3.js": "^2.0.0",
+    "@solana/kit": "^2.3.0",
     "dotenv": "^16.4.7"
   },
   "devDependencies": {
