--- a/sample-dapps/token-sweeper-eip-7702/.env.example
+++ b/sample-dapps/token-sweeper-eip-7702/.env.example
@@ -1,7 +1,7 @@
 # API Keys (Server-side only)
 COVALENT_API_KEY=your_covalent_api_key_here
 
-# WalletConnect Project ID (Required for ConnectKit - client-side needed)
+# WalletConnect Project ID (Required for RainbowKit - client-side needed)
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
 # RPC URLs (Optional - will use public RPCs if not set, which is not recommended for production)
 NEXT_PUBLIC_BASE_RPC_URL=your_base_rpc_url_here
