update repo with fixes, add .env for fe

--- a/sample-dapps/rwa-tokenizer/frontend/.env.example
+++ b/sample-dapps/rwa-tokenizer/frontend/.env.example
@@ -1,9 +1,6 @@
 # RPC URLs
-NEXT_PUBLIC_RPC_BASE_SEPOLIA=https://sepolia.base.org
-NEXT_PUBLIC_RPC_SEPOLIA=https://eth-sepolia.g.alchemy.com/v2/YOUR_KEY
-
-# Private Keys (for deployment)
-PRIVATE_KEY=
+NEXT_PUBLIC_RPC_BASE_SEPOLIA=
+NEXT_PUBLIC_RPC_SEPOLIA=
 
 # WalletConnect/Rainbow
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
@@ -11,15 +8,6 @@ NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 # IPFS - Pinata
 NEXT_PUBLIC_PINATA_JWT=
 NEXT_PUBLIC_PINATA_GATEWAY=gateway.pinata.cloud
-
-# Google Maps API (for location picker)
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
-
-# Contracts (filled after deploy)
-NEXT_PUBLIC_RWA721_ADDRESS_BASE_SEPOLIA=
-NEXT_PUBLIC_MARKETPLACE_ADDRESS_BASE_SEPOLIA=
-NEXT_PUBLIC_RWA721_ADDRESS_SEPOLIA=
-NEXT_PUBLIC_MARKETPLACE_ADDRESS_SEPOLIA=
 
 # USDC Addresses (Testnet)
 NEXT_PUBLIC_USDC_BASE_SEPOLIA=0x036CbD53842c5426634e7929541eC2318f3dCF7e
@@ -32,7 +20,7 @@ NEXT_PUBLIC_PERMIT2_ADDRESS=0x000000000022D473030F116dDEE9F6B43aC78BA3
 NEXT_PUBLIC_LZ_ENDPOINT_BASE_SEPOLIA=0x6EDCE65403992e310A62460808c4b910D972f10f
 NEXT_PUBLIC_LZ_ENDPOINT_SEPOLIA=0x6EDCE65403992e310A62460808c4b910D972f10f
 
-# LayerZero V2 Endpoint IDs (not V1 chain IDs!)
+# LayerZero Chain IDs (V2 Endpoint IDs)
 NEXT_PUBLIC_LZ_CHAIN_ID_BASE_SEPOLIA=40245
 NEXT_PUBLIC_LZ_CHAIN_ID_SEPOLIA=40161
 
@@ -40,6 +28,15 @@ NEXT_PUBLIC_LZ_CHAIN_ID_SEPOLIA=40161
 NEXT_PUBLIC_CCTP_DOMAIN_BASE_SEPOLIA=6
 NEXT_PUBLIC_CCTP_DOMAIN_SEPOLIA=0
 
-# Etherscan API Keys (for verification)
-ETHERSCAN_API_KEY=
-BASESCAN_API_KEY=
+# Contract Addresses (LayerZero V2 with tokenURI transfer support - UPDATED with open mint)
+NEXT_PUBLIC_RWA721_ADDRESS_BASE_SEPOLIA=0x9773D00FdE6Cf785CbFc8777514D69e7F84FF6c1
+NEXT_PUBLIC_RWA721_ADDRESS_SEPOLIA=0xAA490D756571F48c7E0Add9056081C9Ae97d4746
+
+
+
+NEXT_PUBLIC_MARKETPLACE_ADDRESS_BASE_SEPOLIA=0x5605CEf208c1BBDCE0ad9E3fDa9f6C53F64b73aE
+NEXT_PUBLIC_MARKETPLACE_ADDRESS_SEPOLIA=0x7973Da8485Adf37D00A8aD2967d490B7A01e88F4
+
+
+# Google Maps API
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
