clean up .env file

--- a/sample-dapps/rwa-tokenizer/.env.example
+++ b/sample-dapps/rwa-tokenizer/.env.example
@@ -1,6 +1,6 @@
 # RPC URLs
-NEXT_PUBLIC_RPC_BASE_SEPOLIA=https://sepolia.base.org
-NEXT_PUBLIC_RPC_SEPOLIA=https://eth-sepolia.g.alchemy.com/v2/YOUR_KEY
+NEXT_PUBLIC_RPC_BASE_SEPOLIA=
+NEXT_PUBLIC_RPC_SEPOLIA=
 
 # Private Keys (for deployment)
 PRIVATE_KEY=
