--- a/sample-dapps/rwa-tokenizer/frontend/.env.example
+++ b/sample-dapps/rwa-tokenizer/frontend/.env.example
@@ -1,42 +1,28 @@
-# RPC URLs
+# RPC URLs (UPDATE THESE)
 NEXT_PUBLIC_RPC_BASE_SEPOLIA=
 NEXT_PUBLIC_RPC_SEPOLIA=
 
-# WalletConnect/Rainbow
+# WalletConnect/Rainbow (UPDATE THIS)
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 
-# IPFS - Pinata
+# IPFS - Pinata (UPDATE THESE)
 NEXT_PUBLIC_PINATA_JWT=
 NEXT_PUBLIC_PINATA_GATEWAY=gateway.pinata.cloud
 
-# USDC Addresses (Testnet)
+# Contract Addresses (UPDATE THESE)
+NEXT_PUBLIC_RWA721_ADDRESS_BASE_SEPOLIA=0xYourBaseSepoliaRWAAddress
+NEXT_PUBLIC_RWA721_ADDRESS_SEPOLIA=0xYourSepoliaRWAAddress
+
+# LayerZero V2 Configuration (DO NOT CHANGE)
+NEXT_PUBLIC_LZ_CHAIN_ID_BASE_SEPOLIA=40245
+NEXT_PUBLIC_LZ_CHAIN_ID_SEPOLIA=40161
+
+# USDC Addresses (DO NOT CHANGE)
 NEXT_PUBLIC_USDC_BASE_SEPOLIA=0x036CbD53842c5426634e7929541eC2318f3dCF7e
 NEXT_PUBLIC_USDC_SEPOLIA=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
 
 # Permit2 Address (Universal)
 NEXT_PUBLIC_PERMIT2_ADDRESS=0x000000000022D473030F116dDEE9F6B43aC78BA3
 
-# LayerZero V2 Endpoints
-NEXT_PUBLIC_LZ_ENDPOINT_BASE_SEPOLIA=0x6EDCE65403992e310A62460808c4b910D972f10f
-NEXT_PUBLIC_LZ_ENDPOINT_SEPOLIA=0x6EDCE65403992e310A62460808c4b910D972f10f
-
-# LayerZero Chain IDs (V2 Endpoint IDs)
-NEXT_PUBLIC_LZ_CHAIN_ID_BASE_SEPOLIA=40245
-NEXT_PUBLIC_LZ_CHAIN_ID_SEPOLIA=40161
-
-# CCTP Domain IDs
-NEXT_PUBLIC_CCTP_DOMAIN_BASE_SEPOLIA=6
-NEXT_PUBLIC_CCTP_DOMAIN_SEPOLIA=0
-
-# Contract Addresses (LayerZero V2 with tokenURI transfer support - UPDATED with open mint)
-NEXT_PUBLIC_RWA721_ADDRESS_BASE_SEPOLIA=0x9773D00FdE6Cf785CbFc8777514D69e7F84FF6c1
-NEXT_PUBLIC_RWA721_ADDRESS_SEPOLIA=0xAA490D756571F48c7E0Add9056081C9Ae97d4746
-
-
-
-NEXT_PUBLIC_MARKETPLACE_ADDRESS_BASE_SEPOLIA=0x5605CEf208c1BBDCE0ad9E3fDa9f6C53F64b73aE
-NEXT_PUBLIC_MARKETPLACE_ADDRESS_SEPOLIA=0x7973Da8485Adf37D00A8aD2967d490B7A01e88F4
-
-
-# Google Maps API
+# Google Maps API (OPTIONAL)
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
