cleanup for wrong endpoint

--- a/rails/x402-micropayments/.env.example
+++ b/rails/x402-micropayments/.env.example
@@ -8,7 +8,7 @@ X402_WALLET_ADDRESS=YourWalletAddressHere
 # x402 Facilitator URL
 # The facilitator handles payment settlement on the blockchain
 # Default: http://localhost:3007 (local development) or https://www.x402.org/facilitator
-# Production: Use your deployed facilitator URL or h
+# Production: Use your deployed facilitator URL
 X402_FACILITATOR_URL=https://www.x402.org/facilitator
 
 # Blockchain network to use for payments
