Fix Vuln backlog

--- a/Streams/qs-react-app/package.json
+++ b/Streams/qs-react-app/package.json
@@ -12,7 +12,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-json-view-lite": "^0.9.6",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "react18-json-view": "^0.2.7",
     "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.4",
