--- a/Streams/wallet-allowance-checker-app/package.json
+++ b/Streams/wallet-allowance-checker-app/package.json
@@ -16,7 +16,7 @@
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
