--- a/sample-dapps/solana-action-blinker/package.json
+++ b/sample-dapps/solana-action-blinker/package.json
@@ -15,7 +15,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.93.1",
-    "next": "14.2.4",
+    "next": "^14.2.33",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0"
@@ -25,7 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^16.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
