--- a/Streams/dex-metrics-dashboard/package.json
+++ b/Streams/dex-metrics-dashboard/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/js": "^0.19.5",
     "@solana/web3.js": "^1.98.0",
-    "next": "15.1.6",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
