--- a/enhanced-apis/NFT-Collection-Explorer/mobile/package.json
+++ b/enhanced-apis/NFT-Collection-Explorer/mobile/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.8",
+    "expo": "^54.0.25",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "^0.82.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
