--- a/enhanced-apis/NFT-Collection-Explorer/web/package.json
+++ b/enhanced-apis/NFT-Collection-Explorer/web/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "ethers": "^5.7.2",
-    "next": "13.0.2",
+    "next": "^16.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.18.0"
@@ -21,7 +21,7 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4",
-    "vercel": "^28.8.0"
+    "vercel": "^48.11.0"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.2"
