--- a/enhanced-apis/token_balance_app/package.json
+++ b/enhanced-apis/token_balance_app/package.json
@@ -9,7 +9,7 @@
     "ethers": "^5.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.4"
   },
