--- a/sample-dapps/coinbase-x402/package.json
+++ b/sample-dapps/coinbase-x402/package.json
@@ -10,21 +10,27 @@
     "build": "echo 'No build step required'",
     "vercel-build": "echo 'No build step required'"
   },
-  "keywords": ["x402", "paywall", "video", "cryptocurrency", "blockchain"],
+  "keywords": [
+    "x402",
+    "paywall",
+    "video",
+    "cryptocurrency",
+    "blockchain"
+  ],
   "author": "",
   "license": "MIT",
   "description": "A demo application showing how to implement a video paywall using the x402 payment protocol",
   "dependencies": {
-    "@coinbase/x402": "^0.3.2",
+    "@coinbase/x402": "^0.7.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "viem": "^2.29.0",
-    "x402-express": "^0.3.2",
-    "x402-fetch": "^0.3.1"
+    "x402-express": "^0.7.3",
+    "x402-fetch": "^0.7.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "vercel": "latest"
+    "vercel": "^41.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
