--- a/sample-dapps/evm-token-factory/package.json
+++ b/sample-dapps/evm-token-factory/package.json
@@ -13,14 +13,14 @@
     "@types/node": "^20.14.2",
     "@web3modal/ethers": "^4.1.11",
     "ethers": "^6.12.0",
-    "next": "14.2.3",
+    "next": "^14.2.33",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/react": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^16.0.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
