--- a/solana/sns-domains/package.json
+++ b/solana/sns-domains/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "start": "ts-node index.ts"
   },
-  "keywords": [ "QuickNode", "Solana", "Solana Name Service" ],
+  "keywords": [
+    "QuickNode",
+    "Solana",
+    "Solana Name Service"
+  ],
   "license": "MIT",
   "dependencies": {
-    "@bonfida/spl-name-service": "^0.1.50",
+    "@bonfida/spl-name-service": "^0.1.25",
     "@solana/web3.js": "^1.61.0"
   },
   "devDependencies": {
