--- a/solana/sol-get-tokens/package.json
+++ b/solana/sol-get-tokens/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "start": "ts-node index.ts"
   },
-  "keywords": [ "QuickNode", "Solana", "Crypto Wallet" ],
+  "keywords": [
+    "QuickNode",
+    "Solana",
+    "Crypto Wallet"
+  ],
   "license": "MIT",
   "dependencies": {
-    "@solana/spl-token": "^0.3.4",
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.60.0"
   },
   "devDependencies": {
+    "@types/node": "^18.8.3",
     "dotenv": "^16.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "@types/node": "^18.8.3"
+    "typescript": "^4.8.3"
   }
 }
