--- a/enhanced-apis/NFT-Collection-Explorer/web/package.json
+++ b/enhanced-apis/NFT-Collection-Explorer/web/package.json
@@ -20,8 +20,7 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4",
-    "vercel": "^41.0.2"
+    "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.2"
