--- a/solana/sns-domains/package.json
+++ b/solana/sns-domains/package.json
@@ -12,8 +12,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@bonfida/spl-name-service": "^0.1.25",
-    "@solana/web3.js": "^1.61.0"
+    "@bonfida/spl-name-service": "^3.0.0",
+    "@solana/web3.js": "^1.95.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.17",
@@ -21,5 +21,9 @@
     "ts-node": "^10.9.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.8.3"
+  },
+  "overrides": {
+    "bigint-buffer": "^1.1.5",
+    "@solana/buffer-layout-utils": "^0.2.0"
   }
 }
