update to Jupiter Price API v3, rebrand to Quicknode

--- a/sample-dapps/solana-staking-ui/.gitignore
+++ b/sample-dapps/solana-staking-ui/.gitignore
@@ -32,6 +32,9 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env
+.env.*
+# Re-include an example file to show required variables (optional)
+!.env.example
 
 # vercel
 .vercel
