Update x402 micropayments implementation to version 1.0.0

--- a/rails/x402-micropayments/.env.example
+++ b/rails/x402-micropayments/.env.example
@@ -12,8 +12,9 @@ X402_WALLET_ADDRESS=YourWalletAddressHere
 X402_FACILITATOR_URL=https://www.x402.org/facilitator
 
 # Blockchain network to use for payments
-# Options: base-sepolia, base, avalanche-fuji, avalanche, solana-devnet, solana
-X402_NETWORK=base-sepolia
+# v2 uses CAIP-2 identifiers: eip155:84532 (Base Sepolia), eip155:8453 (Base)
+# Solana examples: solana-devnet, solana
+X402_CHAIN=eip155:84532
 
 # Payment asset (token contract address)
 # Base Sepolia USDC: 0x036CbD53842c5426634e7929541eC2318f3dCF7e
