--- a/solana/jupiter-ultra-swap/.gitignore
+++ b/solana/jupiter-ultra-swap/.gitignore
@@ -24,9 +24,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# env files (can opt-in for committing if needed)
 .env
+.env.*
+# Re-include an example file to show required variables (optional)
+!.env.example
 
 # vercel
 .vercel
