--- a/solana/jupiter-ultra-swap/package.json
+++ b/solana/jupiter-ultra-swap/package.json
@@ -14,6 +14,7 @@
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "@tailwindcss/postcss": "^4.1.18",
     "next": "^16.1.1",
     "react": "^19",
