--- a/rails/x402-micropayments/.env.example
+++ b/rails/x402-micropayments/.env.example
@@ -12,8 +12,7 @@ X402_WALLET_ADDRESS=YourWalletAddressHere
 X402_FACILITATOR_URL=https://www.x402.org/facilitator
 
 # Blockchain network to use for payments
-# Options: base-sepolia, base, avalanche-fuji, avalanche, solana-devnet, solana
-X402_NETWORK=base-sepolia
+X402_CHAIN=base-sepolia
 
 # Payment asset (token contract address)
 # Base Sepolia USDC: 0x036CbD53842c5426634e7929541eC2318f3dCF7e
@@ -44,11 +43,8 @@ RAILS_ENV=development
 # ===== SOLANA CONFIGURATION (if using Solana network) =====
 # Uncomment these if you want to use Solana instead of EVM chains
 
-# Solana RPC endpoint
-# X402_SOLANA_RPC_URL=https://api.devnet.solana.com
+# Solana keys for payment generation
+# X402_SOL_PRIVATE_KEY=YourBase58OrJsonArrayPrivateKeyHere
+# X402_SOL_PAY_TO=YourSolanaWalletAddressHere
 
-# Solana program ID for x402
-# X402_SOLANA_PROGRAM_ID=YourProgramIDHere
-
-# Token mint address (USDC on Solana Devnet)
-# X402_SOLANA_TOKEN_MINT=4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
+# X402_SOLANA_FEE_PAYER=YourFeePayerPublicKeyHere (optional)
