implement feedback + polish up

--- a/Streams/userstream/.env.example
+++ b/Streams/userstream/.env.example
@@ -15,4 +15,4 @@ QN_SOLANA_ENDPOINT=""
 DATABASE_URL="file:./dev.db"
 
 # App URL (for webhook destination - use ngrok for local dev)
-APP_URL="http://localhost:3000"
+APP_URL="https://abc123.ngrok-free.app"
