Update copytrading bot app to use Streams

--- a/webhooks/copytrading-bot-bnb/.env.example
+++ b/webhooks/copytrading-bot-bnb/.env.example
@@ -4,7 +4,7 @@ BNB_RPC_URL=your-quicknode-rpc-url # 👈 UPDATE HERE
 # Wallet Configuration (⚠️ KEEP THIS SECURE)
 PRIVATE_KEY=your-private-key # 👈 UPDATE HERE
 
-# Webhook Security
+# Streams Security
 QUICKNODE_SECURITY_TOKEN=your-security-token # 👈 UPDATE HERE
 
 # Server Configuration
